--- a/src/app/pages/modify-reservation/modify-reservation.component.html
+++ b/src/app/pages/modify-reservation/modify-reservation.component.html
@@ -35,7 +35,7 @@
 
       <!-- Campos de Edición -->
 
-      @if (reservationForm.get('userId')?.value && !reservationNotFound) {
+      @if (reservationForm.get('userEmail')?.value && !reservationNotFound) {
       <section>
         <div class="mb-6">
           <label
