--- a/src/app/pages/new-reservation/new-reservation.component.html
+++ b/src/app/pages/new-reservation/new-reservation.component.html
@@ -19,54 +19,70 @@
     </div>
 
     <div>
-      <label for="userId" class="block text-sm font-medium text-gray-700"
-        >ID del Usuario</label
+      <label for="userEmail" class="block text-sm font-medium text-gray-700"
+        >Usuario</label
       >
       <input
-        id="userId"
-        formControlName="userId"
-        type="number"
+        id="userEmail"
+        formControlName="userEmail"
+        placeholder="Email del usuario"
+        type="email"
         class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500 sm:text-sm"
       />
     </div>
 
-    <div class="mb-4">
+    <!-- Lista de Habitaciones -->
+    <div class="mb-6">
       <label for="rooms" class="block text-sm font-medium text-gray-700"
         >Habitaciones</label
       >
-      <input
-        id="rooms"
-        #roomInput
-        formControlName="roomIds"
-        type="text"
-        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
-      />
-      <button
-        type="button"
-        (click)="addRoom(roomInput.value)"
-        class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-r-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
-      >
-        Añadir
-      </button>
-      @if (selectedRooms.length > 0) {
-      <div class="mt-2">
-        <h4 class="text-sm font-medium text-gray-700">
-          Habitaciones Seleccionadas:
-        </h4>
-        <ul class="list-disc pl-5">
-          @for (room of selectedRooms; track $index) {
-          <li>{{ room }}</li>
-          }
-        </ul>
+      <div class="mt-2 flex items-center space-x-4">
+        <input
+          type="text"
+          formControlName="newRoom"
+          placeholder="Añadir habitación"
+          class="py-2 px-4 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm"
+        />
+        <button
+          type="button"
+          (click)="addRoom()"
+          class="py-2 px-4 text-sm font-medium text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 rounded-md"
+        >
+          Agregar
+        </button>
       </div>
-      }
+      <ul class="mt-2 space-y-2">
+        @for (room of reservationForm.get('roomIds')?.value; track room) {
+        <li
+          class="flex items-center justify-between py-2 px-4 bg-gray-100 rounded-md"
+        >
+          <span>{{ room }}</span>
+          <button
+            type="button"
+            (click)="removeRoom($index)"
+            class="text-sm font-medium text-red-600 hover:text-red-800"
+          >
+            Eliminar
+          </button>
+        </li>
+        }
+      </ul>
     </div>
 
-    <button
-      type="submit"
-      class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-blue-500 hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
-    >
-      Crear Reserva
-    </button>
+    <footer class="flex justify-end space-x-4">
+      <button
+        type="button"
+        (click)="cancelCreation()"
+        class="py-2 px-4 border border-transparent rounded-md text-sm font-medium text-gray-700 bg-gray-100 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-300"
+      >
+        Cancelar
+      </button>
+      <button
+        type="submit"
+        class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-blue-500 hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+      >
+        Crear Reserva
+      </button>
+    </footer>
   </form>
 </div>
